dark mode fix on landing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,5 @@
 :root {
-  --background: #ffffff;
+  --background: black;
   --foreground: white;
 }
 
